# flask_mongodb_backend

./: .dockerignore  .gitignore  README.md  config.py  docker-compose.yml  env  gunicorn_starter.sh  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
app/: __init__.py
app/api/api_v1/endpoints/: resource_view.py
app/controllers/: resource_controller.py
app/core/: extensions.py  log.py
app/core/exceptions/: HTTPException.py  app_exceptions.py
app/core/factory/: seeder.py
app/core/repository/: __init__.py
app/core/repository/base/: __init__.py  mongo_base_repository.py
app/health/: health_check.py
app/models/: resource_model.py
app/repositories/: cache_object.py  resource_repository.py
app/schema/: __init__.py  resource_schema.py
app/services/: auth_service.py  redis_service.py
app/static/: swagger.json
app/utils/: __init__.py
tests/: base_test_case.py  test_app.py
tests/controllers/: test_resource_controller.py
tests/model/: test_resource_model.py
tests/views/: test_resource_routes.py
