[tool.poetry]
name = "flask-mongodb-backend"
version = "0.1.0"
description = ""
authors = ["Michael Asumadu <masumadu@archsolutions.online>"]
readme = "README.md"
packages = [{include = "flask_mongodb_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.2.2"
pinject = "^0.14.1"
flask-mongoengine = "^1.0.0"
flask-swagger-ui = "^4.11.1"
mongoengine = "^0.27.0"
apispec = "^6.3.0"
redis = "^4.5.4"
marshmallow = "^3.19.0"
apispec-webframeworks = "^0.5.2"
marshmallow-enum = "^1.5.1"
flask-cors = "^3.0.10"
flask-marshmallow = "^0.15.0"
blinker = "^1.6.2"
healthcheck = "^1.3.3"
python-dotenv = "^1.0.0"
pyjwt = "^2.6.0"
faker = "^18.6.2"
pre-commit = "^3.3.1"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.5"
safety = "^2.3.5"
fakeredis = "^2.11.2"
mongomock = "^4.1.2"
flask-testing = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
